fixed overflow issue on typeahead

--- a/server/public/css/components/_forms.scss
+++ b/server/public/css/components/_forms.scss
@@ -77,17 +77,10 @@
 		border-radius: 0;
 		width: 100%;
 		padding: 0;
+		overflow: hidden;
 		li {
-			border-bottom: 0.1em $menu-stroke-grey solid;
-	                a {
-                            &:active {
-                                overflow: hidden;
-                            }
-                            &:focus {
-                                overflow: hidden;
-                            }
-                        }           
-                }
+			border-bottom: 0.1em $menu-stroke-grey solid;       
+        }
 	}
 	form {
 		display: none;
